--- a/StripeTastic/data/index.html
+++ b/StripeTastic/data/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-sm-12 col-4">
                 <div class="alert alert-primary" role="alert">
