First working rest communcation done.

--- a/StripeTastic/data/index.html
+++ b/StripeTastic/data/index.html
@@ -17,53 +17,9 @@
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-sm-12 col-4">
-                <div class="alert alert-primary" role="alert">
-                    A simple primary alert—check it out!
-                </div>
-                <div class="alert alert-secondary" role="alert">
-                    A simple secondary alert—check it out!
-                </div>
-                <div class="alert alert-success" role="alert">
-                    A simple success alert—check it out!
-                </div>
-                <div class="alert alert-danger" role="alert">
-                    A simple danger alert—check it out!
-                </div>
-                <div class="alert alert-warning" role="alert">
-                    A simple warning alert—check it out!
-                </div>
-                <div class="alert alert-info" role="alert">
-                    A simple info alert—check it out!
-                </div>
-                <div class="alert alert-light" role="alert">
-                    A simple light alert—check it out!
-                </div>
-                <div class="alert alert-dark" role="alert">
-                    A simple dark alert—check it out!
-                </div>
-            </div>
-            <div class="col-sm-12 col-4">
-                <button type="button" class="btn btn-primary">Primary</button>
-                <button type="button" class="btn btn-secondary">Secondary</button>
-                <button type="button" class="btn btn-success">Success</button>
-                <button type="button" class="btn btn-danger">Danger</button>
-                <button type="button" class="btn btn-warning">Warning</button>
-                <button type="button" class="btn btn-info">Info</button>
-                <button type="button" class="btn btn-light">Light</button>
-                <button type="button" class="btn btn-dark">Dark</button>
-
-                <button type="button" class="btn btn-link">Link</button>
-            </div>
-            <div class="col-sm-12 col-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
+                <label for="customRange1">Strobo speed</label>
+                <input type="range" class="custom-range" oninput="changeStroboSpeed(this.value)" min="1" max="150"
+                    step="1">
             </div>
         </div>
     </div>
@@ -77,6 +33,7 @@
     <!-- Jquery and Bootstrap -->
     <script src="vendor/js/jquery.js"></script>
     <script src="vendor/js/bootstrap.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
