--- a/StripeTastic/data/index.html
+++ b/StripeTastic/data/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-sm-12 col-4">
                 <label for="customRange">Strobo speed<span id="value-strobo-speed"></span></label>
@@ -29,7 +29,19 @@
                     oninput="changeColor(this.value)" />
             </div>
         </div>
+    </div> -->
+
+    <div style="width: 50vw; height: 100vh;">
+        <textarea id="stripe1" style="width: 100%; height: 90%;"></textarea>
+        <button id="updateStripe1">Send stripe 1 data.</button>
     </div>
+
+    <div style="width: 50vw; height: 100vh;">
+        <textarea id="stripe2" style="width: 100%; height: 90%;"></textarea>
+        <button id="updateStripe2">Send stripe 2 data.</button>
+    </div>
+
+
 
     <!-- simple webserver example code. -->
     <!-- <h1>ESP32 Web Server</h1>
