--- a/StripeTastic/data/index.html
+++ b/StripeTastic/data/index.html
@@ -31,12 +31,12 @@
         </div>
     </div> -->
 
-    <div style="width: 50vw; height: 100vh;">
+    <div style="width: 30vw; height: 100vh; float:left;">
         <textarea id="stripe1" style="width: 100%; height: 90%;"></textarea>
         <button id="updateStripe1">Send stripe 1 data.</button>
     </div>
 
-    <div style="width: 50vw; height: 100vh;">
+    <div style="width: 30vw; height: 100vh; float:left;">
         <textarea id="stripe2" style="width: 100%; height: 90%;"></textarea>
         <button id="updateStripe2">Send stripe 2 data.</button>
     </div>
