Removed loop delay, added legend for dev web view

--- a/StripeTastic/data/index.html
+++ b/StripeTastic/data/index.html
@@ -41,6 +41,44 @@
         <button id="updateStripe2">Send stripe 2 data.</button>
     </div>
 
+    <div style="width: auto; height: 100vh; float:left;">
+        <div class="enum_values">
+            <b>OperationModes</b>
+            <ol>
+                <li value="0">Off</li>
+                <li>Static</li>
+                <li>Effect</li>
+            </ol>
+        </div>
+        <div class="enum_values">
+            <b>ColorModes(Licht)</b>
+            <ol>
+                <li value="0">Rainbow</li>
+                <li>Random</li>
+                <li>OneUserColor</li>
+                <li>TwoUserColor</li>
+                <li>ThreeUserColor</li>
+            </ol>
+        </div>
+        <div class="enum_values">
+            <b>Effects</b>
+            <ol>
+                <li value="0">Strobo</li>
+                <li>Ball</li>
+                <li>BallStackable</li>
+                <li>BallStackableToCenter</li>
+                <li>Music</li>
+                <li>MusicFromCenter</li>
+                <li>LavaLamp</li>
+                <li>MovingRainbow</li>
+                <li>FillUp</li>
+                <li>FillUp2</li>
+                <li>FillUp3</li>
+                <li>FillUp4</li>
+            </ol>
+        </div>
+    </div>
+
 
 
     <!-- simple webserver example code. -->
