--- a/StripeTastic/data/index.html
+++ b/StripeTastic/data/index.html
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-page-file-name="pages/led-config.html">Led's</a>
+                    <a class="nav-link" href="#" data-page-file-name="./pages/led-config.html">Led's</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Einstellungen</a>
+                    <a class="nav-link" href="#" data-page-file-name="./pages/settings.html">Einstellungen</a>
                 </li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
     <!-- Scripts -->
     <script src="./vendor/js/jquery.js"></script>
     <script src="./vendor/js/bootstrap.js"></script>
-    <script src="./js/script.js"></script>
+    <script data-main="js/app.js" src="./vendor/js/require.js"></script>
 </body>
 
 </html>
