--- a/StripeTastic.Client/wwwroot/index.html
+++ b/StripeTastic.Client/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./vendor/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 
-    <title>StripeTastic - DeviceName</title><!-- TODO: devicename -->
+    <title>StripeTastic - qDeviceName</title><!-- TODO: devicename -->
 </head>
 
 <body>
@@ -35,6 +35,11 @@
 
     <!-- Page-Content -->
     <div class="container-fluid" id="container-page">
+
+    </div>
+
+    <!-- Alert handler container-->
+    <div id="ah-container">
 
     </div>
 
