--- a/StripeTastic.Client/wwwroot/pages/settings.html
+++ b/StripeTastic.Client/wwwroot/pages/settings.html
@@ -1,33 +1,36 @@
-Settings!
-<div id="stripe_container">
-	<form>
-		<div class="form-group">
-			<label for="exampleFormControlInput1">Email addressaaa</label>
-			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+<div id="container-device-settings">
+	<!-- Connection settings -->
+	<div class="card" id="card-connection-settings">
+		<div class="card-header bg-secondary text-white">Connection settings</div>
+		<div class="card-body">
+			<form>
+				<div class="form-group">
+					<label for="device-settings-connection-mode">Connection mode</label>
+					<select class="form-control" id="device-settings-connection-mode">
+						<option value="0">AdHoc</option>
+						<option value="1">Router</option>
+						<option value="2">Both</option>
+					</select>
+				</div>
+
+				<div class="card wifi-settings-card" id="card-{{connection-mode}}">
+					<div class="card-header">{{connection-mode-title}}</div>
+					<div class="card-body row">
+						<div class="form-group col-md-4">
+							<label for="device-settings-{{connection-mode}}-ssid">Ssid</label>
+							<input class="form-control" type="text" id="device-settings-{{connection-mode}}-ssid" />
+						</div>
+						<div class="form-group col-md-4">
+							<label for="device-settings-{{connection-mode}}-password">Password</label>
+							<input class="form-control" type="password" id="device-settings-{{connection-mode}}-password" />
+						</div>
+						<div class="form-group col-md-4">
+							<label for="device-settings-{{connection-mode}}-channel">Channel</label>
+							<input class="form-control" type="number" id="device-settings-{{connection-mode}}-channel" />
+						</div>
+					</div>
+				</div>
+			</form>
 		</div>
-		<div class="form-group">
-			<label for="exampleFormControlSelect1">Example select</label>
-			<select class="form-control" id="exampleFormControlSelect1">
-				<option>1</option>
-				<option>2</option>
-				<option>3</option>
-				<option>4</option>
-				<option>5</option>
-			</select>
-		</div>
-		<div class="form-group">
-			<label for="exampleFormControlSelect2">Example multiple select</label>
-			<select multiple class="form-control" id="exampleFormControlSelect2">
-				<option>1</option>
-				<option>2</option>
-				<option>3</option>
-				<option>4</option>
-				<option>5</option>
-			</select>
-		</div>
-		<div class="form-group">
-			<label for="exampleFormControlTextarea1">Example textarea</label>
-			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-		</div>
-	</form>
+	</div>
 </div>
