--- a/StripeTastic.Client/wwwroot/pages/settings.html
+++ b/StripeTastic.Client/wwwroot/pages/settings.html
@@ -13,23 +13,55 @@
 					</select>
 				</div>
 
-				<div class="card wifi-settings-card" id="card-{{connection-mode}}">
-					<div class="card-header">{{connection-mode-title}}</div>
+				<!-- Wifi Settings adhoc -->
+				<div class="card wifi-settings-card" id="card-wifi-settings-adhoc">
+					<div class="card-header">AdHoc settings</div>
 					<div class="card-body row">
 						<div class="form-group col-md-4">
-							<label for="device-settings-{{connection-mode}}-ssid">Ssid</label>
-							<input class="form-control" type="text" id="device-settings-{{connection-mode}}-ssid" />
+							<label for="device-settings-adhoc-ssid">Ssid</label>
+							<input class="form-control" type="text" id="device-settings-adhoc-ssid" />
 						</div>
 						<div class="form-group col-md-4">
-							<label for="device-settings-{{connection-mode}}-password">Password</label>
-							<input class="form-control" type="password" id="device-settings-{{connection-mode}}-password" />
+							<label for="device-settings-adhoc-password">Password</label>
+							<input class="form-control" type="password" id="device-settings-adhoc-password" />
 						</div>
 						<div class="form-group col-md-4">
-							<label for="device-settings-{{connection-mode}}-channel">Channel</label>
-							<input class="form-control" type="number" id="device-settings-{{connection-mode}}-channel" />
+							<label for="device-settings-adhoc-channel">Channel</label>
+							<input class="form-control" type="number" id="device-settings-adhoc-channel" />
 						</div>
 					</div>
 				</div>
+
+				<!-- Wifi Settings router -->
+				<div class="card wifi-settings-card" id="card-wifi-settings-router">
+					<div class="card-header">Router settings</div>
+					<div class="card-body row">
+						<div class="form-group col-md-4">
+							<label for="device-settings-router-ssid">Ssid</label>
+							<input class="form-control" type="text" id="device-settings-router-ssid" />
+						</div>
+						<div class="form-group col-md-4">
+							<label for="device-settings-router-password">Password</label>
+							<input class="form-control" type="password" id="device-settings-router-password" />
+						</div>
+						<div class="form-group col-md-4">
+							<label for="device-settings-router-channel">Channel</label>
+							<input class="form-control" type="number" id="device-settings-router-channel" />
+						</div>
+
+						<div class="list-group col-12" id="device-settings-router-wifi-scan" role="tablist">
+							<a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab"
+								aria-controls="home">Home</a>
+							<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab"
+								aria-controls="profile">Profile</a>
+							<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab"
+								aria-controls="messages">Messages</a>
+							<a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab"
+								aria-controls="settings">Settings</a>
+						</div>
+					</div>
+				</div>
+
 			</form>
 		</div>
 	</div>
